fix: slider pagination mobile

--- a/src/blocks/Slider/Slider.scss
+++ b/src/blocks/Slider/Slider.scss
@@ -183,6 +183,11 @@ $dotSize: 8px;
                     display: none;
                 }
             }
+
+            & #{$dotsCn} {
+                left: $indentSM;
+                width: calc(100% - $indentSM);
+            }
         }
     }
 
